--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 server.port=80
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=admin
+spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://leablogs.com:3306/swoft
+
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=10
+spring.datasource.tomcat.max-wait=10000
+spring.datasource.tomcat.initial-size=5
+
+mybatis.mapper-locations=classpath:mybaits/mapper/*.xml
+mybatis.type-aliases-package=com.leablogs.pojo
+mybatis.type-handlers-package=com.leablogs.typehandler
+
+logging.level.root=info
+logging.level.org.springframework=info
+logging.level.org.mybatis=info
