--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,26 @@
 server.port=80
-
+# 数据库源配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://leablogs.com:3306/swoft
-
+spring.datasource.url=jdbc:mysql://leablogs.com:3306/swoft?useSSL=false
+# 数据池配置
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=10
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.initial-size=5
-
+# mybatis 配置
 mybatis.mapper-locations=classpath:mybaits/mapper/*.xml
+mybatis.config-location=classpath:mybaits/config/mybatis-config.xml
 mybatis.type-aliases-package=com.leablogs.pojo
 mybatis.type-handlers-package=com.leablogs.typehandler
-
+# 插件配置
+#mybatis.configuration.interceptors=
+# 执行器
+#mybatis.executor-type=""
+# 级联延迟加载属性
+#mybatis.configuration.aggressive-lazy-loading=
+# logging 配置
 logging.level.root=info
 logging.level.org.springframework=info
 logging.level.org.mybatis=info
