--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,6 @@ mybatis.type-handlers-package=com.leablogs.typehandler
 # 级联延迟加载属性
 #mybatis.configuration.aggressive-lazy-loading=
 # logging 配置
-logging.level.root=info
-logging.level.org.springframework=info
-logging.level.org.mybatis=info
+logging.level.root=debug
+logging.level.org.springframework=debug
+logging.level.org.mybatis=debug
