--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,17 @@ mybatis.type-handlers-package=com.leablogs.typehandler
 # 级联延迟加载属性
 #mybatis.configuration.aggressive-lazy-loading=
 # logging 配置
-logging.level.root=debug
-logging.level.org.springframework=debug
-logging.level.org.mybatis=debug
+logging.level.root=info
+logging.level.org.springframework=info
+logging.level.org.mybatis=info
+
+# redis pool
+spring.redis.jedis.pool.max-active=10
+spring.redis.jedis.pool.max-idle=10
+spring.redis.jedis.pool.max-wait=2000
+spring.redis.jedis.pool.min-idle=5
+# redis
+spring.redis.port=6379
+spring.redis.host=192.168.182.128
+spring.redis.timeout=1000
+#spring.redis.password=
