--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,43 @@ spring.redis.port=6379
 spring.redis.host=192.168.182.128
 spring.redis.timeout=1000
 #spring.redis.password=
+
+#string cache
+spring.cache.cache-names=redisCache
+# 缓存配置细节
+#spring.cache.caffeine.spec=
+# 超时时间
+spring.cache.couchbase.expiration=0
+# ehcache 缓存初始化文件 
+#spring.cache.ehcache.config=
+#infinispan配置文件
+#spring.cache.infinispan.config=
+# jcache 配置文件
+#spring.cache.jcache.config=
+# jcache 缓存提供者配置
+#spring.cache.jcache.provider=
+# 允许redis缓存值为空
+spring.cache.redis.cache-null-values=true
+spring.cache.redis.key-prefix=redis
+# 缓存超市时间
+spring.cache.redis.time-to-live=0
+#是否启用前缀
+spring.cache.redis.use-key-prefix=true
+spring.cache.type=redis
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
