--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,57 +21,6 @@ mybatis.type-handlers-package=com.leablogs.typehandler
 # 级联延迟加载属性
 #mybatis.configuration.aggressive-lazy-loading=
 # logging 配置
-logging.level.root=info
-logging.level.org.springframework=info
-logging.level.org.mybatis=info
-
-# redis pool
-spring.redis.jedis.pool.max-active=10
-spring.redis.jedis.pool.max-idle=10
-spring.redis.jedis.pool.max-wait=2000
-spring.redis.jedis.pool.min-idle=5
-# redis
-spring.redis.port=6379
-spring.redis.host=192.168.182.128
-spring.redis.timeout=1000
-#spring.redis.password=
-
-#string cache
-spring.cache.cache-names=redisCache
-# 缓存配置细节
-#spring.cache.caffeine.spec=
-# 超时时间
-spring.cache.couchbase.expiration=0
-# ehcache 缓存初始化文件 
-#spring.cache.ehcache.config=
-#infinispan配置文件
-#spring.cache.infinispan.config=
-# jcache 配置文件
-#spring.cache.jcache.config=
-# jcache 缓存提供者配置
-#spring.cache.jcache.provider=
-# 允许redis缓存值为空
-spring.cache.redis.cache-null-values=true
-spring.cache.redis.key-prefix=redis
-# 缓存超市时间
-spring.cache.redis.time-to-live=0
-#是否启用前缀
-spring.cache.redis.use-key-prefix=true
-spring.cache.type=redis
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+logging.level.root=debug
+logging.level.org.springframework=debug
+logging.level.org.mybatis=debug
