--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,9 +59,9 @@ spring.cache.redis.time-to-live=0
 spring.cache.redis.use-key-prefix=true
 spring.cache.type=redis
 
-
-
-
+# web view
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
 
 
