1.pdf 2.国际化配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,9 +63,19 @@ spring.cache.type=redis
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
+# 国际化配置
+# 设置国际化消是否采用格式化  默认false
+spring.messages.always-use-message-format=false
+# shezhi 设置国际化属性名称
+spring.messages.basename=messaes
+# 设置国际化消息缓存超时 s 默认不超超时，若果0 每次重新加载
+spring.messages.cache-duration=0
 
-
-
+spring.messages.encoding=UTF-8
+# 如果没找到特定区域设置文件，则设置是否返回系统区域设置
+spring.messages.fallback-to-system-locale=true
+# 是否使用消息编码作为默认响应，非抛出nosuchmessageexception 建议开发阶段使用
+spring.messages.use-code-as-default-message=false
 
 
 
