--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=80
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://leablogs.com:3306/swoft?useSSL=false
+spring.datasource.url=jdbc:mysql://leablogs.com:3306/springboot?useSSL=false
 # 数据池配置
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=10
